# attractor

./: .gitignore  DEMO.md  IMPLEMENTATION.md  LICENSE  README.md  USAGE.md  attractor.py  example.py  pyproject.toml  setup.py  test_attractor.py
.github/workflows/: ci.yml  publish.yml
examples/: branching.dot  complete.dot  human_gate_example.dot  simple.dot  stylesheet_example.dot  tool_example.dot
src/attractor/: __init__.py  cli.py  conditions.py  engine.py  events.py  handlers.py  models.py  parser.py  server.py  stylesheet.py  validation.py
src/attractor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_cli.py  test_conditions.py  test_conditions_extra.py  test_coverage_additions.py  test_engine.py  test_engine_extra.py  test_events.py  test_examples.py  test_handlers.py  test_handlers_extra.py  test_integration.py  test_models_extra.py  test_parser.py  test_parser_extra.py  test_server.py  test_stylesheet.py  test_stylesheet_extra.py  test_validation.py  test_validation_extra.py
