[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-attractor"
version = "0.3.0"
description = "A DOT-based pipeline runner for AI workflows"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Attractor Contributors"},
]
dependencies = [
    "pyparsing>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]
server = [
    "flask>=2.0.0",
]

[project.scripts]
py-attractor = "attractor.cli:main"
py-attractor-server = "attractor.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
# Modern recommended line length
line-length = 88

# Assume Python 3.8+ (matching setup.py requirement)
target-version = "py38"

[tool.ruff.lint]
# Use modern recommended rule set
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
]

# Ignore specific rules that may be too strict for this codebase
ignore = [
    "E501",   # line too long (let formatter handle it)
]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Use spaces for indentation
indent-style = "space"

[dependency-groups]
dev = [
    "pytest-cov>=5.0.0",
]
